# Cpp_GameEngine

./: .gitignore  CMakeLists.txt  README.md  run.sh  setup.sh
engine/: CMakeLists.txt
engine/Components/include/: Component.h  SpriteRenderer.h  TextComponent.h  Transform.h
engine/Components/src/: Transform.cpp
engine/Core/Components/include/: Component.h  SpriteRenderer.h  TextComponent.h
engine/Core/Components/src/: SpriteRenderer.cpp  TextComponent.cpp  Transform.cpp
engine/Core/UI/Include/: Canvas.h  CanvasObject.h  UIElement.h
engine/Core/include/: Camera.h  Component.h  Engine.h  EngineTime.h  Font.h  GameObject.h  Renderer.h  ResourceManger.h  Scene.h  Singleton.h  Texture2D.h  Transform.h
engine/Core/src/: Camera.cpp  Engine.cpp  EngineTime.cpp  Font.cpp  GameObject.cpp  Renderer.cpp  ResourceManger.cpp  Scene.cpp  Texture2D.cpp  Transform.cpp
engine/Input/include/: Command.h  ICommand.h  InputData.h  InputHandler.h
engine/Input/src/: InputHandler.cpp
engine/UI/include/: Canvas.h  CanvasObject.h  UIElement.h  UITextElement.h  UITransform.h
engine/UI/src/: Canvas.cpp  CanvasObject.cpp  UIElement.cpp  UITextElement.cpp  UITransform.cpp
engine/include/: Engine.h  EngineTime.h  Renderer.h
engine/src/: Engine.cpp  EngineTime.cpp  Renderer.cpp
game/: CMakeLists.txt
game/Commands/include/: MoveCommand.h
game/Commands/src/: MoveCommand.cpp
game/Components/include/: PlayerMovement.h
game/Components/src/: PlayerMovement.cpp
game/Core/include/: Game.h
game/Core/src/: Game.cpp
game/Interfaces/include/: IMoveable.h
game/include/: Game.h
game/src/: Game.cpp  main.cpp
